--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/all.css?v1.1.4">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="js/vue_3.2.19.js"></script>
     <!-- 外掛插件 -->
     <script src="js/swipeslider.js?v1.0.0"></script>
     <script src="js/marquee.js?v1.0.0"></script>
@@ -1162,7 +1162,6 @@
                         for (let i = 0; i < self.eventBanner.bottom.length; i++) {
                             self.eventBanner.bottom[i].switch = true;
                         }
-
 
                         self.carousel.maxSize = data.carousel;
                         self.carousel.minSize = data.scarousel;
